namespace MVC.Models.Recipe;

public class PreparationStepModel
{
    public int Order { get; set; }
    public string Description { get; set; } = "";
}